syntax = "proto3";

package company;

// Company service definition
service CompanyService {
  // Create user profile and company
  rpc CreateUserAndCompany(CreateUserAndCompanyRequest) returns (CreateUserAndCompanyResponse);
  
  // Get user profile
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  
  // Update user profile
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
  
  // Validate user exists
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
  
  // Get user companies
  rpc GetUserCompanies(GetUserCompaniesRequest) returns (GetUserCompaniesResponse);
}

// Create user and company request
message CreateUserAndCompanyRequest {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
  string company_name = 6;
  string company_domain = 7;
}

// Create user and company response
message CreateUserAndCompanyResponse {
  bool success = 1;
  string message = 2;
  UserProfile user_profile = 3;
  Company company = 4;
}

// Get user profile request
message GetUserProfileRequest {
  string user_id = 1;
}

// Get user profile response
message GetUserProfileResponse {
  bool success = 1;
  string message = 2;
  UserProfile user_profile = 3;
}

// Update user profile request
message UpdateUserProfileRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string role = 4;
  bool is_active = 5;
}

// Update user profile response
message UpdateUserProfileResponse {
  bool success = 1;
  string message = 2;
  UserProfile user_profile = 3;
}

// Validate user request
message ValidateUserRequest {
  string user_id = 1;
}

// Validate user response
message ValidateUserResponse {
  bool success = 1;
  string message = 2;
  bool exists = 3;
  bool is_active = 4;
}

// Get user companies request
message GetUserCompaniesRequest {
  string user_id = 1;
}

// Get user companies response
message GetUserCompaniesResponse {
  bool success = 1;
  string message = 2;
  repeated UserCompany user_companies = 3;
}

// User profile message
message UserProfile {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
  bool is_active = 6;
  string created_at = 7;
  string updated_at = 8;
}

// Company message
message Company {
  string id = 1;
  string name = 2;
  string domain = 3;
  string subscription_plan = 4;
  int32 max_agents = 5;
  string created_at = 6;
  string updated_at = 7;
}

// User company message
message UserCompany {
  string id = 1;
  string user_id = 2;
  string company_id = 3;
  string role = 4;
  string created_at = 5;
  Company company = 6;
}
